--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cookie-session": "^2.0.0",
     "date-fns": "^2.29.3",
     "dateformat": "^5.0.3",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.6",
     "excel4node": "^1.8.2",
     "express": "^4.18.2",
@@ -16,8 +17,7 @@
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.9.7",
-    "mysql2-promise": "^0.1.4",
+    "mysql2": "^3.14.0",
     "nodemailer": "^6.9.6",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.11",
-    "nodemon": "^2.0.21",
+    "nodemon": "^3.1.9",
     "typescript": "^4.9.5"
   }
 }
