--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "chart.js": "^4.2.1",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dateformat": "^5.0.3",
     "dotenv": "^16.4.7",
